2008-04-28  Calum Benson <calum.benson@sun.com>

	* capplet/nwam-manager-properties.glade

	Add controls for showing/selecting NCP, of which we'll now 
	have two in Phase I. (Work in progress, may require 
	further tweaking.)

2008-04-03  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam_env_pref_dialog.c: (_cu_cond_combo_filter_value),
	(condition_field_op_changed_cb), (condition_value_changed_cb),
	(_cu_cond_combo_cell_cb), (_cu_cond_combo_filter_visible_cb),
	(_cu_cond_combo_new), (table_one_line_state), (table_lines_init),
	(table_conditon_new): Fix some parts of conditions, need more work.
	* common/nwamui_cond.c: (nwamui_cond_op_to_str): Some strings should
	changed according to the spec.
	* common/nwamui_env.c: (nwamui_env_get_condition_subject),
	(nwamui_env_get_condition_predicate): Use integer tree model.

2008-03-27  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam-manager-properties.glade: Enable "rules hint" on all
	tree views.

2008-03-27  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam-manager-properties.glade: P8, add a mnemonic "Ru_les".
	* capplet/nwam_conn_conf_ip_panel.c:
	(nwam_compose_multi_ip_tree_view), (nwam_conf_ip_panel_init),
	(show_changed_cb), (nwam_conn_multi_ip_cell_cb),
	(nwam_conn_multi_ip_cell_edited_cb): P10 ~ P12
	Remove "(None)" from ipv6 expander label; Remove "Hostname" column;
	Change "Prefix" to "Prefix Length".
	* capplet/nwam_conn_stat_panel.c: (nwam_compose_tree_view):
	P7 Use different colors for even/odd row.
	* capplet/nwam_net_conf_panel.c: (nwam_net_conf_panel_class_init),
	(net_conf_set_property), (net_conf_get_property),
	(nwam_compose_tree_view), (nwam_net_conf_panel_init),
	(nwam_net_conf_panel_finalize),
	(nwam_net_conf_update_status_cell_cb),
	(nwam_net_pref_connection_enabled_toggled_cb),
	(vanity_name_editing_started),
	(nwam_net_pref_connection_view_row_activated_cb),
	(update_rules_from_ncu),
	(nwam_net_pref_connection_view_row_selected_cb),
	(conditions_connected_toggled_cb), (ncu_notify_cb): P8, 9