@@ -1,3 +1,10 @@
+2008-04-29  Calum Benson  <calum.benson@sun.com>
+
+	* capplet/nwam_pref_dialog.c: (show_changed_cb),
+	(show_combo_cell_cb):
+
+	s/Network Configuration/Network Profile in GUI.
+
 2008-04-28  Calum Benson <calum.benson@sun.com>
 
 	* capplet/nwam-manager-properties.glade
